# triplet-mha-vit

./: LICENSE  README.md  pyproject.toml
config/: config.yaml
models/: __init__.py  patch_embedding.py  patch_extract.py  triplet_encoder.py  vit_model.py
scripts/: evaluate.py  train.py
tests/: test_model.py
utils/: __init__.py  data_loader.py  metrics.py  visualize.py
